--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -120,7 +120,7 @@
                         android:inputType="textEmailAddress"
                         android:textColorHint="@color/blue"
                         android:maxLines="1"
-                        android:textDirection="ltr"
+                        android:textDirection="rtl"
                         android:gravity="start|center_vertical"
                         android:textSize="16sp"
                         android:background="@android:color/white"
@@ -159,7 +159,7 @@
                         android:textColorHint="@color/blue"
                         android:maxLines="1"
                         android:fontFamily="@font/cairo"
-                        android:textDirection="ltr"
+                        android:textDirection="rtl"
                         android:gravity="start|center_vertical"
                         android:textSize="16sp"
                         android:background="@android:color/white"
@@ -197,11 +197,12 @@
                         android:drawablePadding="30dp"
                         android:textColor="@color/blue"
                         android:hint="@string/mobil"
-                        android:inputType="textEmailAddress"
+                        android:inputType="phone"
                         android:textColorHint="@color/blue"
                         android:maxLines="1"
                         android:fontFamily="@font/cairo"
-                        android:textDirection="ltr"
+                        android:textDirection="rtl"
+
                         android:gravity="start|center_vertical"
                         android:textSize="16sp"
                         android:background="@android:color/white"
@@ -231,11 +232,12 @@
                         android:hint="@string/pass"
                         android:textColor="@color/blue"
                         android:inputType="textPassword"
+                        android:textDirection="rtl"
                         android:drawablePadding="30dp"
                         android:drawableLeft="@drawable/passsignup"
                         android:gravity="start|center_vertical"
                         android:paddingEnd="15dp"
-                        android:textSize="20sp"
+                        android:textSize="15sp"
                         android:paddingStart="15dp"
                         android:layout_marginTop="5dp"
                         android:background="@android:color/white"
