--- a/app/src/main/res/layout/layoutin_activityhome.xml
+++ b/app/src/main/res/layout/layoutin_activityhome.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/relativeHome"
+    tools:context=".View.HomePage">
 
 
     <android.support.v7.widget.Toolbar
@@ -20,6 +23,7 @@
 
 
             <ImageView
+                android:id="@+id/Nav_Icon"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
