--- a/app/src/main/res/layout/nav_layout.xml
+++ b/app/src/main/res/layout/nav_layout.xml
@@ -6,22 +6,24 @@
     android:background="@color/blue"
     android:orientation="vertical"
     android:layoutDirection="ltr"
+    android:layout_margin="10dp"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+
+        android:gravity="center_vertical"
         >
 
         <ImageView
             android:id="@+id/Icon"
-            android:padding="1dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:padding="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:scaleType="fitXY"
-
             />
         <TextView
             android:textDirection="ltr"
@@ -31,9 +33,9 @@
             android:textSize="18sp"
             android:textColor="@color/white"
             android:text="First"
+            android:layout_marginStart="5dp"
             android:fontFamily="@font/cairo"
-            android:padding="5dp"
-            android:textAlignment="textStart"
+            android:textAlignment="textEnd"
             />
 
     </LinearLayout>
