--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,20 +5,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="ltr"
     android:background="@color/blue"
     tools:context=".View.HomePage"
-    android:layoutDirection="ltr"
     >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/Rec_Nav"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/Rec_Nav"
+            android:layout_width="235dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            >
+        </android.support.v7.widget.RecyclerView>
+
+
+        <TextView
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="19dp"
+            android:gravity="center_vertical"
+            android:fontFamily="@font/cairo"
+            android:drawableEnd="@drawable/door"
+            android:layout_alignParentEnd="true"
+            android:layout_height="60dp" />
+
+    </RelativeLayout>
+
+
 
 
 
@@ -27,6 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/relativeHome"
+
         >
 
 
@@ -69,7 +89,9 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_below="@+id/toolbar"
             android:id="@+id/nested"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
+            android:paddingBottom="55dp"
             android:layout_height="match_parent">
 
 
@@ -145,11 +167,13 @@
                         android:layout_width="40dp"
                         android:layout_margin="10dp"
                         android:layout_gravity="center"
+                        android:src="@drawable/ic_bread"
                         android:background="@drawable/circle_shape"
                         android:layout_height="40dp" />
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_margin="10dp"
+                        android:src="@drawable/ic_milk"
                         android:layout_gravity="center"
                         android:background="@drawable/circle_shape"
                         android:layout_height="40dp" />
@@ -235,7 +259,8 @@
 
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rec"
+                    android:id="@+id/recitems"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
