--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -1,15 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:background="@drawable/rec_items_shape"
+        android:elevation="10dp">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:src="@drawable/millkingone"
+                android:layout_marginBottom="20sp"
+                android:layout_margin="5dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:scaleType="fitXY" />
+
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_below="@+id/thumbnail"
+                android:layout_height="wrap_content">
+
+
+
+                <LinearLayout
+                    android:layout_width="90dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    android:layout_alignParentStart="true"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:id="@+id/text"
+                        android:layout_width="match_parent"
+                        android:layout_margin="5dp"
+                        android:text="لبن"
+                        android:textDirection="ltr"
+                        android:fontFamily="@font/cairo"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:fontFamily="@font/cairo"
+                        android:text="$1255"
+                        android:layout_margin="5dp"
+                        android:textDirection="ltr"
+                        android:textColor="@color/blue"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/heart"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                     />
 
 
 
 
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="120dp"-->
-        <!--android-->
-        <!--android:layout_height="140dp"></android.support.v7.widget.CardView>-->
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+
+
+
+
+
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
