--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:layoutDirection="ltr"
     android:layout_height="wrap_content"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -11,6 +12,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layoutDirection="ltr"
         android:layout_margin="5dp"
         android:background="@drawable/rec_items_shape"
         android:elevation="10dp">
