--- a/app/src/main/res/drawable/rec_items_shape.xml
+++ b/app/src/main/res/drawable/rec_items_shape.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-
     <solid android:color="#FFF"/>
-
-    <stroke android:color="#686363" android:width="3dp"/>
-
+    <corners android:radius="10dp"/>
 </shape>
