--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layoutDirection="ltr"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Card"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
-
+    android:background="@drawable/rec_items_shape"
+    android:padding="5dp"
+    android:layout_margin="5dp"
+    android:elevation="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layoutDirection="ltr"
-        android:layout_margin="5dp"
-        android:background="@drawable/rec_items_shape"
-        android:elevation="10dp">
 
 
         <RelativeLayout
@@ -91,9 +86,5 @@
 
 
 
-
-
-
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
