--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -333,7 +333,8 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recitems"
-
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
