--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -31,12 +31,12 @@
             <ImageView
                 android:id="@+id/backhome"
                 android:layout_width="40dp"
-                android:src="@drawable/ic_back"
+                android:src="@drawable/ic_arrow_back_black_24dp"
                 android:layout_alignParentStart="true"
                 android:layout_height="40dp" />
             <ImageView
                 android:layout_width="50dp"
-                android:src="@drawable/ic_hand"
+                android:src="@drawable/ic_search_black_24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_height="50dp" />
 
