--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -30,7 +30,8 @@
             
             <ImageView
                 android:id="@+id/backhome"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/ic_arrow_back_black_24dp"
                 android:layout_alignParentStart="true"
                 android:layout_height="40dp" />
