Show Product ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <color name="blue">#00acec</color>
-
+    <color name="dark_blue">#FF067199</color>
     <color name="bgBottomNavigation">#fe485a</color>
 
     <color name="bacG">#514f4f</color>
