--- a/app/src/main/res/layout/rec_in_homepage_style.xml
+++ b/app/src/main/res/layout/rec_in_homepage_style.xml
@@ -26,7 +26,9 @@
                 android:layout_margin="5dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:transitionName="transition"
+                />
 
 
 
